<resources>
    <string name="app_name">My Application_ITE1</string>
    <string name="opt1">DAILY</string>
    <string name="opt2">WEEKLY</string>
    <string name="opt3">MONTHLY</string>
    <string name="hdr">Income Renewal Rate</string>
    <string name="income">Enter Income</string>
    <string name="save">Desired Savings</string>
    <string name="opt4">YEARLY</string>
    <string name="head1">MONEY MANAGER</string>
    <string name="instrucn1">Please Select Income Renewal Rate</string>
    <string name="expend">Enter Detailed Expenditure</string>
    <string name="budget">BUDGET</string>
    <string name="expend1">EXPENDITURE</string>
    <string name="savings">TOTAL SAVINGS</string>
    <string name="optDyna">T.B.C</string>
    <string name="head2">EXPENDITURES</string>


</resources>
